# GEOUNED

./: CMakeLists.txt  README.md  Warning_Solids_definition.txt  f.py  pyproject.toml
.github/workflows/: black.yml  ci.yml  documentation.yml
Suspicious_solids/: Solid_original_0.stp  Solid_original_148.stp  Solid_original_157.stp  Solid_original_158.stp  Solid_original_52.stp  Solid_split_0.stp  Solid_split_148.stp  Solid_split_157.stp  Solid_split_158.stp  Solid_split_52.stp
docs/install/: install_linux.rst
docs/usage/: python_api_usage.rst  python_cli_usage.rst
examples/: reverse_example.py
scripts/: config.ini  configReverse.ini  geouned  geouned.py  geounedClassCall.py
src/geouned/: __init__.py
src/geouned/GEOReverse/: core.py  reverse.py
src/geouned/GEOReverse/Modules/: MCNPinput.py  Objects.py  XMLinput.py  buildCAD.py  buildSolidCell.py  options.py  processInp.py  splitFunction.py
src/geouned/GEOUNED/: __init__.py  code_version.py  core.py
src/geouned/GEOUNED/Conversion/: CellDefinition.py
src/geouned/GEOUNED/Cuboid/: translate.py
src/geouned/GEOUNED/Decompose/: Decom_one.py
src/geouned/GEOUNED/LoadFile/: LoadFunctions.py
src/geouned/GEOUNED/Utils/: BasicFunctions_part1.py  BasicFunctions_part2.py  BooleanSolids.py  Functions.py  Geometry_GU.py
src/geouned/GEOUNED/Utils/Options/: Classes.py
src/geouned/GEOUNED/Void/: Void.py  VoidBoxClass.py
src/geouned/GEOUNED/Write/: Functions.py  MCNPFormat.py  OpenMCFormat.py  PHITSFormat.py  SerpentFormat.py
src/geouned/GEOUNED/conversion/: cell_definition.py
src/geouned/GEOUNED/decompose/: decom_one.py
src/geouned/GEOUNED/loadfile/: load_functions.py  load_step.py
src/geouned/GEOUNED/utils/: basic_functions_part2.py  boolean_function.py  boolean_solids.py  data_classes.py  functions.py  geometry_gu.py  q_form.py
src/geouned/GEOUNED/void/: void.py  void_box_class.py
src/geouned/GEOUNED/write/: functions.py  mcnp_format.py  openmc_format.py  phits_format.py  serpent_format.py  write_files.py
src/geouned/georeverse/: code_version.py  reverse.py
src/geouned/georeverse/modules/: build_cad.py  build_solid_cell.py  mcnp_input.py  objects.py  process_inp.py  remh.py  split_function.py  xml_input.py  xml_parser.py
src/geouned/georeverse/modules/parser/: parser.py
src/geouned/geouned/: __init__.py  code_version.py
src/geouned/geouned/conversion/: cell_definition.py
src/geouned/geouned/cuboid/: translate.py
src/geouned/geouned/decompose/: decom_one.py
src/geouned/geouned/load_file/: load_functions.py  load_step.py
src/geouned/geouned/utils/: basic_functions_part1.py  basic_functions_part2.py  boolean_function.py  boolean_solids.py  functions.py  geometry_gu.py  q_form.py
src/geouned/geouned/void/: void.py  void_box.py  void_functions.py
src/geouned/geouned/write/: additional_files.py  functions.py  mcnp_format.py  openmc_format.py  phits_format.py  serpent_format.py  string_functions.py  write_files.py
testing/: test.py
tests/: config_complete_defaults.json  config_minimal.json  config_no_defaults.ini  config_non_defaults.json  test_convert.py  test_reverse.py  test_transport.py  test_volumes.py
(+4 files in other folders)
